--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   	<div class="home">
     	<div class="nav-bar">
       		<div class="logo">
-                <a href="portfolio_home_2.html">
+                <a href="index.html">
         			<img class="logo-monogram" alt="" src="img/logo.svg" alt="Laura Foy">
         		</a>
       		</div>
@@ -94,7 +94,7 @@
     	var navItemContainer = document.getElementById("navItemContainer");
     	if (navItemContainer) {
 			navItemContainer.addEventListener("click", function (e) {
-				window.location.href = "portfolio_home_2.html"
+				window.location.href = "index.html"
 			});
     	}
 	</script>
