fix more dependencies

--- a/portfolio-ostinato.html
+++ b/portfolio-ostinato.html
@@ -17,13 +17,13 @@
 <body class="ostinato">
         <div class="nav-bar-dark">
             <div class="logo">
-              <a href="portfolio_home.html">
+              <a href="index.html">
                   <img class="logo-monogram" src="img/logo.svg" alt="Laura Foy">
               </a>
             </div>
           <nav>
             <div class="nav-items">
-                <a href="portfolio_home.html">HOME</a>
+                <a href="index.html">HOME</a>
                   <div class="active-nav-item" id="navItemContainer">
                         <b>WORK</b>
                   </div>
