--- a/about_me.html
+++ b/about_me.html
@@ -17,7 +17,7 @@
 <body>
     <div class="nav-bar">
         <div class="logo">
-          <a href="#">
+          <a href="index.html">
               <img class="logo-monogram" src="img/logo.svg" alt="Laura Foy">
           </a>
         </div>
