--- a/about_me.html
+++ b/about_me.html
@@ -23,7 +23,7 @@
         </div>
       <nav>
         <div class="nav-items">
-            <a href="index.html">HOME</a>
+            <a href="index.html">Home</a>
             <a href="#recent-work">WORK</a>
               <div class="active-nav-item" id="navItemContainer">
                     <b>ABOUT</b>
