--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Laura Foy</title>
   	<meta charset="utf-8">
   	<meta name="viewport" content="initial-scale=1, width=device-width">
-  	<link rel="stylesheet"  href="css/css_2.css" />
+  	<link rel="stylesheet"  href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     	<div class="nav-bar">
       		<div class="logo">
                 <a href="index.html">
-        			<img class="logo-monogram" alt="" src="img/logo.svg" alt="Laura Foy">
+        			<img class="logo-monogram" alt="" src="./assets/img/logo.svg" alt="Laura Foy">
         		</a>
       		</div>
             <nav>
@@ -24,7 +24,7 @@
           				<b>HOME</b>
         			</div>
 					<a href="#recent-work">WORK</a>
-					<a href="about_me.html">ABOUT</a>
+					<a href="./public/about_me.html">ABOUT</a>
 					<a href="#contact">CONTACT</a>
       			</div>
             </nav>
@@ -40,7 +40,7 @@
 					<h2>RECENT WORK</h2>
 					<div class="project-card-default-parent">
 						<div class="uicard">
-							<a href="portfolio-ostinato.html"><!---FIRST CASESTUDY IMAGE LINK---> 
+							<a href="./public/ostinato.html"><!---FIRST CASESTUDY IMAGE LINK---> 
 							<div class="ostinato-uicard">
 								<div class="overlay-dark">
 									<h1>OSTINATO</h1>
@@ -49,7 +49,7 @@
 				  			</a>
 				  		</div>
 						<div class="uicard">
-							<a href="sl_internship.html">
+							<a href="./public/sl_internship.html">
 								<div class="sl-uicard">
 									<div class="overlay-light">
 								 		<h1>SYNERGY LEARNING INTERNSHIP</h1>
