--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Laura Foy</title>
+	
+  <link rel="icon" type="image/x-icon" href="./assets/img/logo.svg">
   	<meta charset="utf-8">
   	<meta name="viewport" content="initial-scale=1, width=device-width">
   	<link rel="stylesheet"  href="css/style.css" />
