--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Laura Foy</title>
 	
-  <link rel="icon" type="image/x-icon" href="./assets/img/logo.svg">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
   	<meta charset="utf-8">
   	<meta name="viewport" content="initial-scale=1, width=device-width">
   	<link rel="stylesheet"  href="css/style.css" />
