--- a/public/ostinato.html
+++ b/public/ostinato.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Ostinato</title>
+	<link rel="icon" type="image/x-icon" href="../assets/favicon.ico">
   	<meta charset="utf-8">
   	<meta name="viewport" content="initial-scale=1, width=device-width">
 
